
EXTRA_DIST = \
    opencv.iss            \
    cvinfo/cvinfo.cpp     \
    cvinfo/cvinfo.dsp     \
    cvinfo/cvinfo.vs2005.vcproj

noinst_PYTHON = \
    check_doc.py               \
    cvt_xml2xml.py             \
    dos2unix.py                \
    extract_aliases.py         \
    extract_constants.py       \
    extract_doublepointers.py  \
    extract_macros.py          \
    gen_make.py                \
    make_index.py              \
    search_leaks.py            \
    unix2dos.py

dist_noinst_SCRIPTS = \
    maintainer_clean.cmd
