cmake_minimum_required(VERSION 2.8)
PROJECT( learningOpenCV2_proj )
FIND_PACKAGE( OpenCV REQUIRED )
ADD_EXECUTABLE( ch2_ex2_1 ch2_ex2_1.cpp )
ADD_EXECUTABLE( ch2_ex2_2 ch2_ex2_2.cpp )
ADD_EXECUTABLE( ch2_ex2_3  ch2_ex2_3.cpp )
ADD_EXECUTABLE( ch2_ex2_4  ch2_ex2_4.cpp )
ADD_EXECUTABLE( ch2_ex2_5  ch2_ex2_5.cpp )
ADD_EXECUTABLE( ch2_ex2_6  ch2_ex2_6.cpp )
ADD_EXECUTABLE( ch2_ex2_7  ch2_ex2_7.cpp )
ADD_EXECUTABLE( ch2_ex2_8  ch2_ex2_8.cpp )
ADD_EXECUTABLE( ch2_ex2_9  ch2_ex2_9.cpp )
ADD_EXECUTABLE( ch2_ex2_10 ch2_ex2_10.cpp )
ADD_EXECUTABLE( ch3_ex3_3  ch3_ex3_3.cpp )
ADD_EXECUTABLE( ch3_ex3_4  ch3_ex3_4.cpp )
ADD_EXECUTABLE( ch3_ex3_5  ch3_ex3_5.cpp )
ADD_EXECUTABLE( ch3_ex3_9  ch3_ex3_9.cpp )
ADD_EXECUTABLE( ch3_ex3_11 ch3_ex3_11.cpp )
ADD_EXECUTABLE( ch3_ex3_12 ch3_ex3_12.cpp )
ADD_EXECUTABLE( ch3_ex3_13 ch3_ex3_13.cpp )
ADD_EXECUTABLE( ch3_ex3_14 ch3_ex3_14.cpp )
ADD_EXECUTABLE( ch3_ex3_15 ch3_ex3_15.cpp )
ADD_EXECUTABLE( ch3_ex3_17 ch3_ex3_17.cpp )
ADD_EXECUTABLE( ch3_ex3_19 ch3_ex3_19.cpp )
ADD_EXECUTABLE( ch3_ex3_20 ch3_ex3_20.cpp )
ADD_EXECUTABLE( ch4_ex4_1  ch4_ex4_1.cpp )
ADD_EXECUTABLE( ch4_ex4_2  ch4_ex4_2.cpp )
ADD_EXECUTABLE( ch4_ex4_3  ch4_ex4_3.cpp )
ADD_EXECUTABLE( ch5_ex5_1  ch5_ex5_1.cpp )
ADD_EXECUTABLE( ch5_ex5_2  ch5_ex5_2.cpp )
ADD_EXECUTABLE( ch5_ex5_3  ch5_ex5_3.cpp )
ADD_EXECUTABLE( ch5_ex5_4  ch5_ex5_4.cpp )
ADD_EXECUTABLE( ch6_ex6_1  ch6_ex6_1.cpp )
ADD_EXECUTABLE( ch6_ex6_2  ch6_ex6_2.cpp )
ADD_EXECUTABLE( ch6_ex6_3  ch6_ex6_3.cpp )
ADD_EXECUTABLE( ch6_ex6_4  ch6_ex6_3.cpp )
ADD_EXECUTABLE( ch6_ex6_5  ch6_ex6_5.cpp )
ADD_EXECUTABLE( ch7_ex7_1  ch7_ex7_1.cpp )
ADD_EXECUTABLE( ch7_ex7_3_expanded ch7_ex7_3_expanded.cpp )
ADD_EXECUTABLE( ch7_ex7_5_HistBackProj ch7_ex7_5_HistBackProj.cpp )
ADD_EXECUTABLE( ch7_ex7_5  ch7_ex7_5.cpp )
ADD_EXECUTABLE( ch8_ex8_2  ch8_ex8_2.cpp )
ADD_EXECUTABLE( ch8_ex8_3  ch8_ex8_3.cpp )
ADD_EXECUTABLE( ch9_ex9_1    ch9_ex9_1.cpp )


ADD_EXECUTABLE( ch9_backgroundAVG ch9_backgroundAVG.cpp ch9_AvgBackground.cpp cv_yuv_codebook.cpp)


ADD_EXECUTABLE( ch9_watershed ch9_watershed.cpp )
ADD_EXECUTABLE( ch10_ex10_1 ch10_ex10_1.cpp )
ADD_EXECUTABLE( ch10_ex10_1b_Horn_Schunck  ch10_ex10_1b_Horn_Schunck.cpp )
ADD_EXECUTABLE( ch10_motempl ch10_motempl.cpp )
ADD_EXECUTABLE( ch10_ex10_2  ch10_ex10_2.cpp )
ADD_EXECUTABLE( ch11_ex11_1  ch11_ex11_1.cpp )
ADD_EXECUTABLE( ch11_ex11_1_fromdisk ch11_ex11_1_fromdisk.cpp )
ADD_EXECUTABLE( ch12_ex12_1   ch12_ex12_1.cpp )
ADD_EXECUTABLE( ch12_ex12_2  ch12_ex12_2.cpp )
ADD_EXECUTABLE( ch12_ex12_3  ch12_ex12_3.cpp )
ADD_EXECUTABLE( ch12_ex12_4  ch12_ex12_4.cpp )
ADD_EXECUTABLE( ch13_ex13_1 ch13_ex13_1.cpp )
ADD_EXECUTABLE( ch13_ex13_2 ch13_ex13_2.cpp )
ADD_EXECUTABLE( ch13_ex13_3 ch13_ex13_3.cpp )
ADD_EXECUTABLE( ch13_ex13_4 ch13_ex13_4.cpp )
TARGET_LINK_LIBRARIES( ch2_ex2_1 ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch2_ex2_2 ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch2_ex2_3   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch2_ex2_4   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch2_ex2_5   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch2_ex2_6   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch2_ex2_7   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch2_ex2_8   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch2_ex2_9   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch2_ex2_10  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_3   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_4   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_5   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_9   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_11  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_12  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_13  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_14  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_15  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_17  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_19  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch3_ex3_20  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch4_ex4_1   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch4_ex4_2   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch4_ex4_3   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch5_ex5_1   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch5_ex5_2   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch5_ex5_3   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch5_ex5_4   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch6_ex6_1   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch6_ex6_2   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch6_ex6_3   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch6_ex6_4   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch6_ex6_5   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch7_ex7_1   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch7_ex7_3_expanded  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch7_ex7_5_HistBackProj  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch7_ex7_5   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch8_ex8_2   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch8_ex8_3   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch9_ex9_1     ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch9_backgroundAVG  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch9_watershed  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch10_ex10_1  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch10_ex10_1b_Horn_Schunck   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch10_motempl  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch10_ex10_2   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch11_ex11_1   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch11_ex11_1_fromdisk  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch12_ex12_1    ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch12_ex12_2   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch12_ex12_3   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch12_ex12_4   ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch13_ex13_1  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch13_ex13_2  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch13_ex13_3  ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ch13_ex13_4  ${OpenCV_LIBS} )
