EXTRA_DIST = \
airplane.jpg  distrans.c    fitellipse.c  lena.jpg      pic3.png    squares.c \
baboon.jpg    drawing.c     fruits.jpg    morphology.c  pic4.png    stuff.jpg \
convexhull.c  edge.c        kalman.c      motempl.c     pic5.png \
delaunay.c    facedetect.c  kmeans.c      pic1.png      pic6.png \
DemHist.c     ffilldemo.c   laplace.c     pic2.png      pyramid_segmentation.c
