csamplesdir=$(pkgdatadir)/samples/c

dist_csamples_DATA = airplane.jpg baboon.jpg build_all.sh \
camshiftdemo.c contours.c convexhull.c cvsample.dsp \
cvsample.vcproj delaunay.c demhist.c distrans.c \
drawing.c edge.c facedetect.c facedetect.cmd ffilldemo.c \
fitellipse.c fruits.jpg kalman.c kmeans.c laplace.c lena.jpg \
lkdemo.c makefile.gcc makefile.gen minarea.c morphology.c \
motempl.c pic1.png pic2.png pic3.png pic4.png pic5.png pic6.png \
pyramid_segmentation.c squares.c stuff.jpg
