csamplesdir=$(pkgdatadir)/samples/c

dist_csamples_DATA = airplane.jpg baboon.jpg box.png box_in_scene.png lena.jpg fruits.jpg stuff.jpg \
pic1.png pic2.png pic3.png pic4.png pic5.png pic6.png tree.avi \
left01.jpg left02.jpg left03.jpg left04.jpg left05.jpg left06.jpg left07.jpg \
left08.jpg left09.jpg left11.jpg left12.jpg left13.jpg left14.jpg \
right01.jpg right02.jpg right03.jpg right04.jpg right05.jpg right06.jpg right07.jpg \
right08.jpg right09.jpg right11.jpg right12.jpg right13.jpg right14.jpg \
stereo_calib.txt build_all.sh cvsample.dsp makefile.ms makefile.gnu \
agaricus-lepiota.data letter-recognition.data bgfg_codebook.cpp bgfg_segm.cpp blobtrack.cpp camshiftdemo.c \
contours.c convexhull.c camshiftdemo.c contours.c convert_cascade.c convexhull.c \
delaunay.c demhist.c dft.c distrans.c drawing.c edge.c facedetect.c \
facedetect.cmd ffilldemo.c find_obj.cpp fitellipse.c houghlines.c kalman.c kmeans.c image.cpp \
inpaint.cpp laplace.c letter_recog.cpp lkdemo.c minarea.c morphology.c motempl.c \
mushroom.cpp pyramid_segmentation.c squares.c stereo_calib.cpp watershed.cpp
