csamplesdir=$(pkgdatadir)/samples/octave

dist_csamples_SCRIPTS =     \
    cam-histo.m            \
    capture-cam.m          \
	chessboard.m           \
    contours.m             \
    convexhull.m           \
    delaunay.m             \
    demhist.m              \
    distrans.m             \
    drawing.m              \
	dft.m                  \
    edge.m                 \
    facedetect.m           \
    ffilldemo.m            \
    fitellipse.m           \
	houghlines.m           \
	inpaint.m              \
    kalman.m               \
    kmeans.m               \
    laplace.m              \
    lkdemo.m               \
	logpolar.m             \
    minarea.m              \
    minidemo.m             \
    morphology.m           \
    motempl.m              \
    pyramid_segmentation.m \
    squares.m              \
    watershed.m
